k8s/deployment.yaml
# k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-java-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: my-java-app
  template:
    metadata:
      labels:
        app: my-java-app
    spec:
      containers:
        - name: my-java-app
          image: ${ACR_LOGIN_SERVER}/my-java-app:${IMAGE_TAG} # GitHub Actions가 채워넣음
          ports:
            - containerPort: 8080
          volumeMounts:
          - name: secrets-mount
            mountPath: "/mnt/secrets"
            readOnly: true
      volumes:
        - name: secrets-mount
          csi:
            driver: secrets-store.csi.k8s.io
            readOnly: true
            volumeAttributes:
              secretProviderClass: "azure-tls-redis-spc"
