k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-java-app-svc
spec:
  selector:
    app: my-java-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
